--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="./assets/images/birthday.png" height="200" alt=""></h3>
     <hr>
     <a href="./public/about.html">About me</a> 💀<br>
-    <a href="./public/contact.html">Contact me </a>💀
+    <a href="./public/contact.html">Contact me </a>💀☠️
    
 </body>
 </html>
